trying to fix height issue on mobile

--- a/client/src/styles/FlashcardDisplay.css
+++ b/client/src/styles/FlashcardDisplay.css
@@ -685,7 +685,7 @@ li {
     padding-top: 0;
     height: 90%;
     margin: auto;
-    z-index: -1;
+    z-index: 0;
   }
   .flashcard {
     width: 95%;
