--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -120,4 +120,7 @@
   .collection-container {
     height: 87vh;
   }
+  .flashcard-collections-container {
+    height: 87vh;
+  }
 }
